# web_search_mcp

./: .cursorrules  .gitignore  AI_USAGE_RULES.md  CURSOR_USER_RULES.md  FINAL_SETUP_GUIDE.md  README.md  README_ENHANCED.md  README_ORIGINAL.md  WEB_SEARCH_FIX_SUMMARY.md  cursor_config_recommended.json  cursor_user_rules_simple.txt  enhanced_server_pure.py  pyproject.toml  server.py  server_native.py  setup_git_repo.sh  start_pure_server.sh  start_server.sh  test_web_search_fix.py
