[project]
name = "web-search-mcp"
version = "0.1.0"
description = "Enhanced MCP server with web automation, search, datasets and interactive feedback capabilities. Original by Fábio Ferreira, enhanced by Emink."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0,<2.3.0",
    "mcp>=1.0.0",
    "psutil>=7.0.0",
    "pyside6>=6.8.2.1",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "fake-useragent>=1.4.0",
    "httpx>=0.25.0",
]
